# robotics-software-engineering

FinalProject/: Presentation_Slides.pptx  README.md  my_home_map.pgm  my_home_map.yaml
FinalProject/my_dynamixel/: CMakeLists.txt  README.md  package.xml
FinalProject/my_dynamixel/config/: ax12_arm.yaml
FinalProject/my_dynamixel/launch/: ax12_controller.launch
FinalProject/my_dynamixel/scripts/: ax12_controller.py  capture.py  initialization.py  laydown.py  precapture.py
FinalProject/my_navigation/: CMakeLists.txt  README.md  package.xml
FinalProject/my_navigation/config/: teb_params.yaml
FinalProject/my_navigation/launch/: all.launch
FinalProject/my_navigation/rviz/: my_map_config.rviz
FinalProject/my_navigation/scripts/: all1.sh  nav_action_client.py  navigation.py  pid.py  yolo.py
FinalProject/robot_voice/: CMakeLists.txt  README.md  package.xml
FinalProject/robot_voice/launch/: voice_total.launch
FinalProject/robot_voice/src/: iat_publish.cpp  tts_subscribe.cpp  voice_cmd.py
